--- a/README
+++ b/README
@@ -1,13 +1,10 @@
+Library puCtools - Version 3.0.0
+C tools
 
-This is how you compile:
-aclocal
-autoconf
-automake -a
-./configure
-make
+Description
+===========
 
-To build backwords compatible one can do configure and make like this;
-./configure --prefix=/metno/local/ --includedir=/metno/local/include/puCtools
-make && make install
 
-The new(NEWS, AUTHORS ChangeLog README) files are there by convention from automake 1.7. Can be removed on later versions of automake. 
+Requirements
+============
+
