--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+metlibs-common-puctools (6.0.0-1) unstable; urgency=low
+
+  * CMake build
+  * shared library
+  * specify correct license for some files
+  * update source repo location
+
+ -- Alexander Bürger <alexander.buerger@met.no>  Fri, 03 Mar 2017 08:00:08 +0100
+
 metlibs-common-puctools (5.0.1-1) unstable; urgency=low
 
   * workaround for bdiana using static libs to build shared lib
