--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+metlibs-common-puctools (6.0.1-1) unstable; urgency=low
+
+  * update debhelper compat to 11
+  * require cmake 3.10
+
+ -- Alexander Bürger <alexander.buerger@met.no>  Thu, 14 Jul 2022 08:00:08 +0200
+
 metlibs-common-puctools (6.0.0-2) unstable; urgency=low
 
   * version number in shlibs
